fix items reservation